# Optimal-Grasp-Framework

./: CMakeLists.txt  README.md  manifest.json  package.xml
include/: a_star.hpp  a_star_functors.hpp  common_defs.hpp  debug.hpp  dkm.hpp  parallel_jaw_constrains.hpp  pcl_defs.hpp  pcl_interface.hpp  predict_functions.hpp  search_state.hpp  search_state_quality_functions.hpp  search_state_successor_generators.hpp  super_contact.hpp  utilities.hpp
src/: a_star.cpp  optimal_grasp_framework.cpp  pcl_interface.cpp  predict_functions.cpp  search_state.cpp  search_state_quality_functions.cpp  search_state_successor_generators.cpp  super_contact.cpp
tiny_sim_pybullet/: box.sdf  box.sdf~  m000.stl  object.urdf  parallel_jaw.urdf  test.py
