<?xml version="1.0"?>
<package>
  <name>optimal_grasp_framework</name>
  <version>1.0.0</version>
  <description>The optimal_grasp_framework package</description>

  <maintainer email="vahid.azizi@gmail.com">Vahid Azizi</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/optimal_grasp_framework</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
